objects/USA_Survey_Response__c.object
<CustomObject>
    <description>USA BRIEFCASE object</description>
    <fields>
        <fullName>USA_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Applicable_Surveys</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>USA_Business_Unit__c</fullName>
        <formula>TEXT( USA_Survey__r.USA_Business_Unit__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>USA_End_Date__c</fullName>
        <formula>USA_Survey__r.USA_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>USA_Start_Date__c</fullName>
        <formula>USA_Survey__r.USA_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>USA_Submitted_By_ID__c</fullName>
        <formula>CreatedBy.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted By ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Submitted_By__c</fullName>
        <label>Submitted By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USA_Survey_ID__c</fullName>
        <formula>USA_Survey__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Survey_Type__c</fullName>
        <formula>TEXT( USA_Survey__r.USA_Survey_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>USA_Survey__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Applicable_Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Survey Response</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Survey Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>